Change to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,13 @@ export(plotCollectionRates)
 export(plotCovarianceMatrix)
 export(plotDetectionCovariates)
 export(plotDetectionRates)
-export(plotFPStage2DetectionRates)
 export(plotOccupancyCovariates)
 export(plotOccupancyRates)
 export(plotOrdinationCovariates)
 export(plotReadIntensity)
 export(plotSigElementsCovMatrix)
 export(plotStage1FPRates)
+export(plotStage2FPRates)
 export(runOccPlus)
 import(dplyr)
 import(ggplot2)
