--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,14 @@
 
 export(computeOccupancyProbs)
 export(plotCollectionRates)
-export(plotCovarianceMatrix)
+export(plotCorrelationMatrix)
 export(plotDetectionCovariates)
 export(plotDetectionRates)
 export(plotOccupancyCovariates)
 export(plotOccupancyRates)
 export(plotOrdinationCovariates)
 export(plotReadIntensity)
-export(plotSigElementsCovMatrix)
+export(plotSigElementsCorMatrix)
 export(plotStage1FPRates)
 export(plotStage2FPRates)
 export(runOccPlus)
